Fix icon color and spacing

--- a/client/market/blocks/item_offer_list/item_offer_list.styl
+++ b/client/market/blocks/item_offer_list/item_offer_list.styl
@@ -36,8 +36,18 @@
   &:before
     content ' | '
 
-.market-list-item-offer__icon
+.market-list-item-offer__used
+  margin-left .3rem
   color $body-color-secondary
+  font-size $font-size-xs
+
+.market-list-item-offer__delivery
+  margin-left .75rem
+  color $body-color-secondary
+
+.market-list-item-offer__interchange
+  margin-left .75rem
+  color $brand-primary + 70%
 
 .market-list-item-offer__meta-del-by
   color $body-color-secondary
